<resources>
    <string name="app_name">MVVM Sample</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an Account? Login</string>
    <string name="home">Home</string>
    <string name="quotes">Quotes</string>
    <string name="welcome">Welcome!</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
</resources>
